# live-portfolio

./: .gitignore  .txt  README.md  main.py  pyproject.toml  requirements.txt
account/: admin.py  api_urls.py  api_views.py  forms.py  models.py  serializers.py  services.py  tasks.py  urls.py  utils.py  views.py
account/migrations/: 0001_initial.py  0002_alter_user_image.py
config/: celery.py  settings.py  urls.py
home/: urls.py  views.py
mixins/: mixing.py
static/assets/css/: main.css
templates/: alert.html  base.html  non-field-errors.html
templates/account/: change_password.html  login.html  password_reset.html  password_reset_confirm.html  resend_verification_email.html  resend_verify_email.html  signup.html  verify_email.html
templates/home/: index.html
validation/: validators.py
